[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"                                   # Web framework
serde = { version = "1.0", features = ["derive"] }  # Serialization/Deserialization
serde_json = "1.0"                                  # JSON handling
tokio = { version = "1", features = ["full"] }      # Async runtime
